--- a/assets/css/tooplate-artxibition.css
+++ b/assets/css/tooplate-artxibition.css
@@ -599,7 +599,7 @@ banner
 */
 
 .main-banner {
-  background-image: url(../images/banner_bg.jpg);
+  background-image: url(../images/banner_bg.JPG);
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
